fixing dark mode

--- a/src/styles/base/_themes-and-colors.scss
+++ b/src/styles/base/_themes-and-colors.scss
@@ -38,7 +38,8 @@
   --base-white: black;
   --base-black: white;
   
-  --t-color-primary: #27598B;
+  //--t-color-primary: #27598B;
+  --t-color-primary: #5A7AAB;
   --t-color-primary-text: #F1F1F1;
   --t-color-secondary: #A5A5A5;
   --t-color-secondary-text: #FFFFFF;
@@ -50,7 +51,8 @@
   --t-color-error: #ED6868;
   
   //--t-color-white: #0A1D2E;
-  --t-color-white: #0C233B;
+  //--t-color-white: #0C233B;
+  --t-color-white: #102D4B;
   --t-color-gray: #FAFBFC;
   //--t-color-black: #DCE2E8;
   --t-color-black: #D2DEE9;
